Correct spacing of dropdown button

--- a/src/components/Editor/Tabs.css
+++ b/src/components/Editor/Tabs.css
@@ -24,7 +24,7 @@
   height: 14px;
   display: inline-block;
   position: relative;
-  top: 5px;
+  top: 4px;
   margin: 4px;
   margin-inline-start: 8px;
   line-height: 0;
