--- a/src/components/shared/Dropdown.css
+++ b/src/components/shared/Dropdown.css
@@ -13,9 +13,9 @@
 .dropdown-button {
   position: absolute;
   offset-inline-end: 18px;
-  top: 4px;
+  top: 1px;
   font-size: 18px;
-  color: var(--theme-body-color);
+  color: var(--theme-comment);
   cursor: pointer;
   background: none;
   border: none;
